force-app/main/default/objects/ssot__ContactPointConsent__dlm/fields/ssot__ConsentCapturedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConsentCapturedDateTime__c</fullName>
    <label>Consent Captured Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConsentCapturedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>