force-app/main/default/objects/ssot__ContactPointConsent__dlm/fields/ssot__rel_1697761157727_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761157727_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConsentStatus_Id_map_ContactPointCon_rel</label>
    <referenceTo>ssot__ConsentStatus__dlm</referenceTo>
    <relationshipLabel>ConsentStatus_Id_map_ContactPointCon_rel</relationshipLabel>
    <relationshipName>rel_1697761157727_end</relationshipName>
    <type>Lookup</type>
</CustomField>