force-app/main/default/objects/ssot__ContactPointConsent__dlm/fields/ssot__rel_1697761160950_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761160950_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactPointConsent_ContactPointId_m_rel</label>
    <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
    <relationshipLabel>ContactPointConsent_ContactPointId_m_rel</relationshipLabel>
    <relationshipName>rel_1697761160950_end</relationshipName>
    <type>Lookup</type>
</CustomField>