force-app/main/default/objects/ssot__ContactPointConsent__dlm/fields/ssot__rel_1697761161096_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761161096_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactPointConsent_DataUsePurposeId_rel</label>
    <referenceTo>ssot__DataUsePurpose__dlm</referenceTo>
    <relationshipLabel>ContactPointConsent_DataUsePurposeId_rel</relationshipLabel>
    <relationshipName>rel_1697761161096_end</relationshipName>
    <type>Lookup</type>
</CustomField>